--- a/css/style.css
+++ b/css/style.css
@@ -3142,18 +3142,63 @@ ul.messagesList li span.date {
 background-color: #0056b3;
 }
 
+.produk-container {
+    display: flex;
+    gap: 20px; 
+    flex-wrap: wrap; 
+}
+
 .detail-produk {
     display: flex;
     flex-wrap: wrap; 
     height: auto;
-    width: auto;
+    width: 600px;
     gap: 20px;
-    margin: 30px;
+    margin: 30px 0px 30px 30px;
+}
+
+.deskripsi-detailproduk{
+	display: flex;
+    flex-wrap: wrap; 
+    height: auto;
+    width: 400px;
+	margin: 30px 0px 30px 0px;
+    gap: 20px;
+}
+
+.deskripsi-detailproduk2{
+	display: flex;
+    flex-wrap: wrap; 
+    height: auto;
+    width: 25px;
+	margin: 30px 0px 30px 0px;
+    gap: 20px;
+}
+
+.devider-left {
+    width: 3px; 
+    height: 100%;
+    background-color: #e4e4e4; 
+    margin-right: 20px; 
+}
+
+.deskripsi-detailproduk h1 {
+    font-size: 25px; 
+	margin-top: 40px;
+}
+
+.deskripsi-detailproduk p {
+    font-size: 20px; 
+	margin-top: 10px;
 }
 
 .detail-text{
 	font-family:'Times New Roman', Times, serif;
 	margin: 36px 10px 10px 0px;
+}
+
+.deskripsi-text {
+	font-family:'Times New Roman', Times, serif;
 }
 
 .detail-produk h1 {
